fixed an overflow regarding the h1 on smaller screens and changed the js a bit

--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ section {
     display: grid;
     place-items: center;
     align-content: center;
-    min-height: 100vh;
-    padding: 0 20vw;
+    min-height: 100dvh;
+    padding: 0 20dvw;
 }
 
 nav {
@@ -342,6 +342,10 @@ footer a:hover {
 }
 
 @media (max-width: 425px) {
+    h1 {
+        font-size: 2.25rem;
+    } 
+
     .links span {
         display: none; 
     }
